# tracing_malloc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  addr2line.py  build.sh  build_libunwind  tracking_malloc.h  tracking_malloc.hpp  tracking_malloc_hook.c  tracking_malloc_record.cpp  tracking_malloc_record.h  tracking_malloc_stacktrace.cpp  tracking_malloc_stacktrace.h  tracking_malloc_stacktrace_default.cpp
src/: CMakeLists.txt  tracing_malloc.h  tracing_malloc_hashmap.c  tracing_malloc_hashmap.h  tracing_malloc_hook.c  tracing_malloc_record.c  tracing_malloc_record.h  tracing_malloc_stacktrace.c  tracing_malloc_stacktrace.h  tracking_malloc.h  tracking_malloc.hpp  tracking_malloc_hashmap.c  tracking_malloc_hashmap.h  tracking_malloc_hook.c  tracking_malloc_record.c  tracking_malloc_record.cpp  tracking_malloc_record.h  tracking_malloc_stacktrace.c  tracking_malloc_stacktrace.h  tracking_malloc_stacktrace_comparison.cpp  tracking_malloc_stacktrace_comparison.h  tracking_malloc_stacktrace_default.h
tools/: addr2line.py  tracing.py
tools/ExamplePlugin/Source/ExamplePlugin/: ExamplePlugin.Build.cs
tools/ExamplePlugin/Source/ExamplePlugin/Private/: ExampleComponent.cpp  ExamplePlugin.cpp  ExamplePluginDef.cpp
tools/ExamplePlugin/Source/ExamplePlugin/Public/: ExamplePlugin.h
tools/ExamplePlugin/Source/ExamplePluginEditor/: ExamplePluginEditor.Build.cs
tools/ExamplePlugin/Source/ExamplePluginEditor/Public/: ExamplePluginEditor.h
tools/addr2line-go/: addr2line.go  go.mod  go.sum  main.go  output_loli.go  output_text.go
tools/alloc_comparison/: CMakeLists.txt  main.cpp
tools/allocation/: core.lua  data.py  main.lua  main.py  tree.lua  view.py
tools/allocation/view/: stack.lua  stack2.lua  stat.lua
tools/disuse/: tracing.py
tools/disuse/ExamplePlugin/: ExamplePlugin.uplugin
tools/disuse/ExamplePlugin/Source/ExamplePlugin/Private/: ExampleComponent.h  ExamplePluginModule.cpp
tools/disuse/ExamplePlugin/Source/ExamplePlugin/Public/: ExamplePluginDef.h  ExamplePluginModule.h
tools/disuse/ExamplePlugin/Source/ExamplePluginEditor/Private/: ExamplePluginEditor.cpp
tools/disuse/allocation_py/: data.py  main.py
tools/disuse/stacktrace_comparison/: main.cpp  stacktrace.h  stacktrace_backtrace.h  stacktrace_backtrace_dladdr.h  stacktrace_boost.cpp  stacktrace_boost.h  stacktrace_gcc_unwind.cpp  stacktrace_libunwind.cpp  stacktrace_libunwind.h
tools/snapshot-compare/: SnapshotCompare.sln
tools/snapshot-compare/SnapshotCompare/: Form1.Designer.cs  Form1.cs  Program.cs
tools/snapshot_parser/: CMakeLists.txt  add2line.cpp  add2line.h  build.bat  main.cpp  map_info.cpp  map_info.h  snapshot.cpp  snapshot.h
tools/stacktrace_comparison/: CMakeLists.txt  main.cpp  stacktrace.h  stacktrace_backtrace.cpp  stacktrace_backtrace_dladdr.cpp  stacktrace_boost.cpp  stacktrace_comparison.cpp  stacktrace_comparison.h  stacktrace_current.cpp  stacktrace_current.h  stacktrace_gcc_unwind.cpp  stacktrace_gcc_unwind.h  stacktrace_libunwind.cpp  stacktrace_libunwind.h  stacktrace_misc.h
tools/viewer/: main.py
