cmake_minimum_required(VERSION 3.5)
set(CMAKE_SUPPRESS_REGENERATION TRUE CACHE BOOL "Disable Zero Check Project")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 11)

set(PROJ_NAME "stacktrace_comparison")
project(${PROJ_NAME})

if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
   add_definitions(-D_DEBUG)
endif()

# set(USE_LIBUNWIND true)

if(USE_LIBUNWIND)
    add_definitions(-DUSE_LIBUNWIND) 
endif(USE_LIBUNWIND)

aux_source_directory(. PROJ_SRC)

add_executable(${PROJ_NAME} ${PROJ_SRC})
set_target_properties(${PROJ_NAME} PROPERTIES LINK_FLAGS -rdynamic)
target_link_libraries(${PROJ_NAME} dl)

if(USE_LIBUNWIND) 
    target_link_libraries(${PROJ_NAME} unwind-x86_64.a)
    target_link_libraries(${PROJ_NAME} unwind.a)
endif(USE_LIBUNWIND)

message(STATUS *******************************************************)
message(STATUS CMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME})
message(STATUS CMAKE_SYSTEM_VERSION=${CMAKE_SYSTEM_VERSION})
message(STATUS CMAKE_HOST_SYSTEM_NAME=${CMAKE_HOST_SYSTEM_NAME})
message(STATUS CMAKE_GENERATOR=${CMAKE_GENERATOR})
message(STATUS CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
message(STATUS CMAKE_C_COMPILER=${CMAKE_C_COMPILER})
message(STATUS CMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER})
message(STATUS CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES=${CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES})
message(STATUS CMAKE_CXX_STANDARD_LIBRARIES=${CMAKE_CXX_STANDARD_LIBRARIES})
message(STATUS CMAKE_C_FLAGS=${CMAKE_C_FLAGS})
message(STATUS CMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS})
message(STATUS CMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS})
message(STATUS CMAKE_MODULE_LINKER_FLAGS=${CMAKE_MODULE_LINKER_FLAGS})
message(STATUS CMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS})
message(STATUS CMAKE_BINARY_DIR=${CMAKE_BINARY_DIR})
message(STATUS *******************************************************)
